@startuml
class Bird {
+ void makeSound()
+ void eat()
+ void fly()
}

class Cat {
+ void makeSound()
+ void eat()
+ void run()
}

class Dog {
+ void makeSound()
+ void eat()
+ void run()
}

abstract class Animal {
+ {abstract}void makeSound()
+ {abstract}void eat()
}

interface Runnable {
+ void run()
}

interface Flyable {
+ void fly()
}



Flyable <|.. Bird
Animal <|-- Bird
Runnable <|.. Cat
Animal <|-- Cat
Runnable <|.. Dog
Animal <|-- Dog
@enduml